week 6 reading examples