@@ -1,8 +1,8 @@
 #!/bin/bash
 if [ "$#" -eq "1" ]
 then
-    echo "Compiling $1.java"
-    javac --module-path $PATH_TO_FX --add-modules javafx.controls -cp out -d out src/$1.java
+    echo "running $1.java"
+    java -cp out $1
 else
     echo "enter the target java class as an argument. only takes one argument"
     exit 1
